docs: fix consistency issues across component and guide docs
- if.mdx: Fix useQueryValue to use reactiveDb from useSmithers()
- if.mdx: Extract WorkflowBody component, wrap with SmithersProvider
- phase.mdx: Add useSmithers() to show where reactiveDb comes from
- smithers-provider.mdx: Add missing useQueryValue, If, Stop imports
- error-handling.mdx: Fix setApproach() to db.state.set()
- error-handling.mdx: Add missing imports to examples

--- a/docs/components/if.mdx
+++ b/docs/components/if.mdx
@@ -25,15 +25,16 @@ description: Conditional rendering component
 ## Multi-Phase Workflow
 
 ```tsx
-function Workflow({ db, executionId }) {
+function WorkflowBody() {
+  const { db, reactiveDb } = useSmithers()
   const { data: phaseVal } = useQueryValue<string>(
-    db.db, "SELECT value FROM state WHERE key = 'phase'"
+    reactiveDb, "SELECT value FROM state WHERE key = 'phase'"
   )
   const phase = phaseVal ?? "research"
   const setPhase = (p: string) => db.state.set('phase', p)
 
   return (
-    <SmithersProvider db={db} executionId={executionId} maxIterations={10}>
+    <>
       <If condition={phase === "research"}>
         <Phase name="Research">
           <Step name="research">
@@ -63,6 +64,14 @@ function Workflow({ db, executionId }) {
           </Step>
         </Phase>
       </If>
+    </>
+  )
+}
+
+function Workflow({ db, executionId }) {
+  return (
+    <SmithersProvider db={db} executionId={executionId} maxIterations={10}>
+      <WorkflowBody />
     </SmithersProvider>
   )
 }
