--- a/docs/guides/error-handling.mdx
+++ b/docs/guides/error-handling.mdx
@@ -17,6 +17,7 @@ description: Handle errors gracefully in Smithers workflows
 ## Retry with State
 
 ```tsx
+import { useSmithers, If, Stop } from "smithers-orchestrator";
 import { useQueryValue } from "smithers-orchestrator/reactive-sqlite";
 
 function RetryWorkflowBody() {
@@ -68,6 +69,9 @@ function RetryWorkflowBody() {
 ## Graceful Degradation
 
 ```tsx
+import { useSmithers, If, Claude, Human } from "smithers-orchestrator";
+import { useQueryValue } from "smithers-orchestrator/reactive-sqlite";
+
 function ResilientWorkflowBody() {
   const { db, reactiveDb } = useSmithers();
   const { data: approach } = useQueryValue<string>(
@@ -109,7 +113,7 @@ function ResilientWorkflowBody() {
   timeout={60000}
   onError={(error) => {
     if (error.message.includes("timeout")) {
-      setApproach("shorter");
+      db.state.set("approach", "shorter");
     }
   }}
 >
