docs: update tagline to 'Ralph the plan not the agent'
- New tagline reflects the core concept
- Add link to Claude Code plugin for 'let your agent write agents'

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,13 +1,13 @@
 ---
 title: Introduction
-description: Let your agent write agents
+description: Ralph the plan not the agent
 ---
 
 # Smithers
 
-**Let your agent write agents.**
+**Ralph the plan, not the agent.**
 
-Your orchestrating agent writes React code that spawns and controls other agents. The plan is the code. The code is the plan.
+Your orchestrating agent writes React code that spawns and controls other agents. The plan is the code. The code is the plan. [Let your agent write agents](/harness-integration#claude-code-plugin).
 
 Used to orchestrate coding agents that run for days, ship PRs autonomously, and self-heal when they fail.
 
