--- a/docs/components/parallel.mdx
+++ b/docs/components/parallel.mdx
@@ -5,7 +5,7 @@ description: Execute children concurrently within a Phase
 
 # Parallel
 
-Execute children concurrently. Steps within a Phase normally run sequentially—wrap in Parallel to run simultaneously.
+Execute children concurrently. Steps within a Phase normally run sequentially; wrap in Parallel to run simultaneously.
 
 ```tsx
 <Phase name="Build">
