--- a/docs/components/phase-registry.mdx
+++ b/docs/components/phase-registry.mdx
@@ -52,7 +52,7 @@ if (!isPhaseActive(index)) return null;
 
 ## Resume Support
 
-State persists in SQLite—workflows resume at correct phase after restart.
+State persists in SQLite. Workflows resume at correct phase after restart.
 
 ## Related
 
