--- a/docs/components/step.mdx
+++ b/docs/components/step.mdx
@@ -75,7 +75,7 @@ Individual task within a Phase. Steps execute sequentially.
 </Step>
 ```
 
-VCS operations fail gracefully—if JJ is unavailable, a warning is logged but the step continues.
+VCS operations fail gracefully. If JJ is unavailable, a warning is logged but the step continues.
 
 ## Database Tracking
 
