--- a/docs/components/task.mdx
+++ b/docs/components/task.mdx
@@ -18,7 +18,7 @@ description: Track individual tasks within workflows
 Renders a checkbox-style task item for tracking progress through workflows.
 
 <Note>
-**Not to be confused with `db.tasks.*`** — that's the internal API for tracking async component lifecycle. This `<Task>` component is purely presentational.
+**Not to be confused with `db.tasks.*`**: that's the internal API for tracking async component lifecycle. This `<Task>` component is purely presentational.
 </Note>
 
 ## Props
@@ -26,7 +26,7 @@ Renders a checkbox-style task item for tracking progress through workflows.
 | Prop | Type | Default | Description |
 |------|------|---------|-------------|
 | `done` | `boolean` | `false` | Whether the task is complete |
-| `children` | `ReactNode` | — | Task description |
+| `children` | `ReactNode` | - | Task description |
 
 ## Dynamic Task Tracking
 
@@ -80,8 +80,8 @@ function TaskDrivenWorkflow() {
 
 ## Best Practices
 
-- **Keep tasks atomic** — each task should represent a single action
-- **Use with Phase** — group related tasks within phases
+- **Keep tasks atomic**: each task should represent a single action
+- **Use with Phase**: group related tasks within phases
 
 ## Related
 
