--- a/docs/examples/coverage-loop.mdx
+++ b/docs/examples/coverage-loop.mdx
@@ -122,10 +122,10 @@ bun examples/coverage-loop/index.tsx
 
 ## What's Happening
 
-- **While** — Loops until condition returns false or max iterations
-- **condition** — Runs `bun test --coverage`, checks against target
-- **useWhileIteration** — Provides iteration context, signalComplete()
-- **SQLite state** — Coverage metrics persist, survive restarts
+- **While**: Loops until condition returns false or max iterations
+- **condition**: Runs `bun test --coverage`, checks against target
+- **useWhileIteration**: Provides iteration context, signalComplete()
+- **SQLite state**: Coverage metrics persist, survive restarts
 
 ## Inspect Progress
 
