--- a/docs/examples/hello-world.mdx
+++ b/docs/examples/hello-world.mdx
@@ -67,7 +67,7 @@ From the depths of the Smithers framework, I emerge to proclaim:
 
 ## What's Happening
 
-- **Database** — SQLite stores execution state for observability
-- **SmithersProvider** — Provides context to child components
-- **Claude** — Executes prompt with Claude Haiku
-- **Cleanup** — Database closed to flush writes
+- **Database**: SQLite stores execution state for observability
+- **SmithersProvider**: Provides context to child components
+- **Claude**: Executes prompt with Claude Haiku
+- **Cleanup**: Database closed to flush writes
