--- a/docs/examples/kitchen-sink.mdx
+++ b/docs/examples/kitchen-sink.mdx
@@ -90,11 +90,11 @@ main();
 
 ## What's Happening
 
-- **Phase** — Sequential stages; only active phase executes
-- **Parallel** — Steps inside run concurrently
-- **Human** — Pauses for approval before proceeding
-- **Task** — Presentational checklist items (not runtime tasks)
-- **Models** — Haiku (fast), Sonnet (reasoning), Opus (quality)
+- **Phase**: Sequential stages; only active phase executes
+- **Parallel**: Steps inside run concurrently
+- **Human**: Pauses for approval before proceeding
+- **Task**: Presentational checklist items (not runtime tasks)
+- **Models**: Haiku (fast), Sonnet (reasoning), Opus (quality)
 
 ## Run It
 
