--- a/docs/examples/mcp-database.mdx
+++ b/docs/examples/mcp-database.mdx
@@ -66,9 +66,9 @@ bun data-analysis.tsx
 
 ## What's Happening
 
-- **Sqlite** — Exposes database to Claude via MCP tools
-- **readOnly** — Prevents accidental mutations
-- **Schema in children** — Claude sees table structure in system prompt
+- **Sqlite**: Exposes database to Claude via MCP tools
+- **readOnly**: Prevents accidental mutations
+- **Schema in children**: Claude sees table structure in system prompt
 
 ## Multiple Databases
 
