--- a/docs/examples/multi-phase-review.mdx
+++ b/docs/examples/multi-phase-review.mdx
@@ -118,10 +118,10 @@ bun review-workflow.tsx
 
 ## What's Happening
 
-- **Review** — AI code review against criteria list
-- **target** — Reviews diff against main branch
-- **Loop** — Failed review returns to implement phase
-- **SQLite state** — Survives restarts, no stale closures
+- **Review**: AI code review against criteria list
+- **target**: Reviews diff against main branch
+- **Loop**: Failed review returns to implement phase
+- **SQLite state**: Survives restarts, no stale closures
 
 ## Inspect State
 
