--- a/docs/examples/structured-output.mdx
+++ b/docs/examples/structured-output.mdx
@@ -98,10 +98,10 @@ Summary: Good practices overall but some security concerns.
 
 ## What's Happening
 
-- **schema** — Zod schema enforces response structure
-- **result.structured** — Typed, validated output
-- **maxRetries** — Retries on schema validation failure
-- **describe()** — Guides Claude on field semantics
+- **schema**: Zod schema enforces response structure
+- **result.structured**: Typed, validated output
+- **maxRetries**: Retries on schema validation failure
+- **describe()**: Guides Claude on field semantics
 
 ## Schema Tips
 
