--- a/docs/examples/subagent-workflow.mdx
+++ b/docs/examples/subagent-workflow.mdx
@@ -131,11 +131,11 @@ bun feature-dev.tsx
 
 ## What's Happening
 
-- **Smithers** — Spawns autonomous subagent with its own planner
-- **plannerModel** — Opus plans the work
-- **executionModel** — Sonnet executes each step
-- **keepScript** — Preserves generated script for debugging
-- **Phase transitions** — SQLite state drives workflow progression
+- **Smithers**: Spawns autonomous subagent with its own planner
+- **plannerModel**: Opus plans the work
+- **executionModel**: Sonnet executes each step
+- **keepScript**: Preserves generated script for debugging
+- **Phase transitions**: SQLite state drives workflow progression
 
 ## Debugging
 
