--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -48,19 +48,19 @@ Smithers is a React framework for coding agents. Write the plan in any coding ha
 
 By evolving a declarative plan rather than wiring up every agent interaction, Smithers excels at:
 
-1. One-time agents — accomplish a task and discard
-2. Long-running agents — run for days or weeks
+1. One-time agents: accomplish a task and discard
+2. Long-running agents: run for days or weeks
 
 **Build things like:**
-- [Hello World](/examples/hello-world) — Your first agent
-- [Coverage Loop](/examples/coverage-loop) — Run until tests pass
-- [Multi-Phase Review](/examples/multi-phase-review) — Implement, test, review
-- [Subagent Workflow](/examples/subagent-workflow) — Agents spawning agents
-- [MCP Database Access](/examples/mcp-database) — Connect to external tools
+- 👋 [Hello World](/examples/hello-world) — Your first agent
+- 🔄 [Coverage Loop](/examples/coverage-loop) — Run until tests pass
+- 📋 [Multi-Phase Review](/examples/multi-phase-review) — Implement, test, review
+- 🤖 [Subagent Workflow](/examples/subagent-workflow) — Agents spawning agents
+- 🔌 [MCP Database Access](/examples/mcp-database) — Connect to external tools
 
 ## Core Idea
 
-You program the **plan**, not the agents. The plan is real executable code—React components that declare what should happen.
+You program the **plan**, not the agents. The plan is real executable code: React components that declare what should happen.
 
 | Other Frameworks     | Smithers                   |
 | -------------------- | -------------------------- |
@@ -68,17 +68,17 @@ You program the **plan**, not the agents. The plan is real executable code—Rea
 | `agent.do_step_2()`  | `<Step name="code">`       |
 | `if failed: retry()` | `<Claude>Fix it</Claude>`  |
 
-The plan is declarative. Like Terraform, not AWS CDK. Plans evolve in an easy-to-understand declarative way over time—and if the plan breaks for any reason, your monitoring agent can edit the code and restart.
+The plan is declarative. Like Terraform, not AWS CDK. Plans evolve in an easy-to-understand declarative way over time, and if the plan breaks for any reason, your monitoring agent can edit the code and restart.
 
 What renders is the current state of the multi-agent setup as readable XML, with SQLite durably persisting state.
 
 Each iteration:
 
-1. Render React → execution plan
-2. Execute runnable agents
-3. Agent output updates state
-4. State change triggers re-render
-5. Loop until done
+1. 🎨 Render React → execution plan
+2. ▶️ Execute runnable agents
+3. 📝 Agent output updates state
+4. 🔄 State change triggers re-render
+5. ✅ Loop until done
 
 The plan runs as deterministic code, but agents can read it to understand the larger context they're operating within.
 
@@ -90,7 +90,7 @@ Ralph (the [autonomous agent loop pattern](https://ghuntley.com/ralph/)) handles
 
 LLMs and humans perform well writing declarative React code. All coding agents can one-shot valid Smithers workflows naturally.
 
-Most multi-agent frameworks fail. They add coordination overhead that costs more than it saves—you end up worse than a simple while loop. Smithers avoids this by making the plan declarative and the state durable. React's functional nature makes even complex multiagent setups easy to modularize and easy to reason about.
+Most multi-agent frameworks fail. They add coordination overhead that costs more than it saves, and you end up worse than a simple while loop. Smithers avoids this by making the plan declarative and the state durable. React's functional nature makes even complex multiagent setups easy to modularize and easy to reason about.
 
 React has a rich ecosystem that works well with agents: Zustand, React Query, and reactive versions of most libraries plug directly into React's reactivity system. This lets you compose declarative plans from battle-tested primitives.
 
@@ -227,7 +227,7 @@ SQLite stores every frame. Use version control to rewind.
 
 ## Roadmap
 
-**North Star: SuperSmithers** — A meta-agent that watches your agents and rewrites their code to optimize. The architecture is ready. Coming soon.
+**North Star: SuperSmithers**: A meta-agent that watches your agents and rewrites their code to optimize. The architecture is ready. Coming soon.
 
 ---
 
